# text16

./: text16.cabal
benchmarks/haskell/Benchmarks/: Builder.hs  Concat.hs  DecodeUtf8.hs  EncodeUtf8.hs  Equality.hs  FileRead.hs  FoldLines.hs  Mul.hs  Multilang.hs  Pure.hs  ReadNumbers.hs  Replace.hs  Search.hs  Stream.hs  WordFrequencies.hs
benchmarks/haskell/Benchmarks/Programs/: BigTable.hs  Cut.hs  Fold.hs  Sort.hs  StripTags.hs  Throughput.hs
scripts/: ApiCompare.hs  Arsec.hs  CaseMapping.hs
src/Data/: Text16.hs
src/Data/Text16/: Array.hs  Encoding.hs  Foreign.hs  IO.hs  Internal.hs  Lazy.hs  Read.hs  Show.hs  Unsafe.hs
src/Data/Text16/Encoding/: Error.hs
src/Data/Text16/Internal/: Builder.hs  ByteStringCompat.hs  Functions.hs  Fusion.hs  IO.hs  Lazy.hs  PrimCompat.hs  Private.hs  Read.hs  Search.hs  Unsafe.hs
src/Data/Text16/Internal/Builder/: Functions.hs
src/Data/Text16/Internal/Builder/Int/: Digits.hs
src/Data/Text16/Internal/Builder/RealFloat/: Functions.hs
src/Data/Text16/Internal/Encoding/: Fusion.hs  Utf16.hs  Utf32.hs  Utf8.hs
src/Data/Text16/Internal/Encoding/Fusion/: Common.hs
src/Data/Text16/Internal/Fusion/: CaseMapping.hs  Common.hs  Size.hs  Types.hs
src/Data/Text16/Internal/Lazy/: Fusion.hs  Search.hs
src/Data/Text16/Internal/Lazy/Encoding/: Fusion.hs
src/Data/Text16/Internal/Unsafe/: Char.hs  Shift.hs
src/Data/Text16/Lazy/: Builder.hs  Encoding.hs  IO.hs  Internal.hs  Read.hs
src/Data/Text16/Lazy/Builder/: Int.hs  RealFloat.hs
tests/: LiteralRuleTest.hs
tests/Tests/: Lift.hs  Properties.hs  QuickCheckUtils.hs  Regressions.hs  SlowFunctions.hs
tests/Tests/Inspection/: Lazy.hs  Strict.hs
tests/Tests/Properties/: Basics.hs  Builder.hs  Folds.hs  Instances.hs  LowLevel.hs  Read.hs  Substrings.hs  Text16.hs  Transcoding.hs
